@@ -266,13 +266,17 @@ class TestRangeFileMultipleRanges(tests.TestCase, TestRangeFileMixin):
     The two last ranges are contiguous. This only rarely occurs (should not in
     fact) in real uses but may lead to hard to track bugs.
     """
-    def _boundary(self):
-        return "separation"
+
+    # The following is used to represent the boundary paramter defined
+    # in HTTP response headers and the boundary lines that separate
+    # multipart content.
+
+    boundary = "separation"
 
     def setUp(self):
         super(TestRangeFileMultipleRanges, self).setUp()
 
-        boundary = self._boundary()
+        boundary = self.boundary
 
         content = ''
         self.first_range_start = 25
@@ -284,22 +288,22 @@ class TestRangeFileMultipleRanges(tests.TestCase, TestRangeFileMixin):
             content += self._multipart_byterange(part, start, boundary,
                                                  file_size)
         # Final boundary
-        content += self._boundary_line(boundary)
+        content += self._boundary_line()
 
         self._file = response.RangeFile('Multiple_ranges_file',
                                         StringIO(content))
+        self.set_file_boundary()
+
+    def _boundary_line(self):
+        """Helper to build the formatted boundary line."""
+        return '--' + self.boundary + '\r\n'
+
+    def set_file_boundary(self):
         # Ranges are set by decoding the range headers, the RangeFile user is
         # supposed to call the following before using seek or read since it
         # requires knowing the *response* headers (in that case the boundary
         # which is part of the Content-Type header).
-        #
-        # Note that all parameters in real HTTPReponse instances are 
-        # passed through rfc822.unquote, so we should too
-        self._file.set_boundary(rfc822.unquote(boundary))
-
-    def _boundary_line(self, boundary):
-        """Helper to build the formatted boundary line."""
-        return '--' + boundary + '\r\n'
+        self._file.set_boundary(self.boundary)
 
     def _multipart_byterange(self, data, offset, boundary, file_size='*'):
         """Encode a part of a file as a multipart/byterange MIME type.
@@ -317,7 +321,7 @@ class TestRangeFileMultipleRanges(tests.TestCase, TestRangeFileMixin):
         :return: a string containing the data encoded as it will appear in the
             HTTP response body.
         """
-        bline = self._boundary_line(boundary)
+        bline = self._boundary_line()
         # Each range begins with a boundary line
         range = bline
         # A range is described by a set of headers, but only 'Content-Range' is
@@ -403,17 +407,27 @@ class TestRangeFileMultipleRanges(tests.TestCase, TestRangeFileMixin):
 class TestRangeFileMultipleRangesQuotedBoundaries(TestRangeFileMultipleRanges):
     """Perform the same tests as TestRangeFileMultipleRanges, but uses 
     an angle-bracket quoted boundary string like IIS 6.0 and 7.0
+    (but not IIS 5, which breaks the RFC in a different way
+    by using square brackets, not angle brackets)
     
     This reveals a bug caused by 
     
-    - The bad implementation of RFC 822 unquoting in Python (angles are not quotes),
-    coupled with 
-    - The bad implementation of RFC 2046 in IIS (angles are not permitted chars in boundary lines).
-    
-    
+    - The bad implementation of RFC 822 unquoting in Python (angles are not 
+      quotes), coupled with 
+
+    - The bad implementation of RFC 2046 in IIS (angles are not permitted chars
+      in boundary lines).
+ 
     """
-    def _boundary(self):
-        return "<q1w2e3r4t5y6u7i8o9p0zaxscdvfbgnhmjklkl>" # IIS 6 and 7 use this value
+    # The boundary as it appears in boundary lines
+    # IIS 6 and 7 use this value
+    _boundary_trimmed = "q1w2e3r4t5y6u7i8o9p0zaxscdvfbgnhmjklkl"
+    boundary = '<' + _boundary_trimmed + '>'
+
+    def set_file_boundary(self):
+        # Emulate broken rfc822.unquote() here by removing angles
+        self._file.set_boundary(self._boundary_trimmed)
+ 
 
 class TestRangeFileVarious(tests.TestCase):
     """Tests RangeFile aspects not covered elsewhere."""
